# pybr25

./: Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml  version.txt
.github/workflows/: backend.yml  config.yml  docs.yml  frontend.yml  main.yml  manual_deploy.yml  rtd-pr-preview.yml  varnish.yml
backend/: .mrbob.ini  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  instance.yaml  pyproject.toml
backend/scripts/: create_site.py
backend/src/pybr25/core/: __init__.py  configure.zcml  permissions.zcml  profiles.zcml  testing.py
backend/src/pybr25/core/controlpanels/: configure.zcml
backend/src/pybr25/core/locales/: pybr25.core.pot
backend/src/pybr25/core/locales/en/LC_MESSAGES/: pybr25.core.po
backend/src/pybr25/core/profiles/default/: browserlayer.xml
backend/src/pybr25/core/profiles/default/registry/: main.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml
backend/src/pybr25/core/serializers/: configure.zcml
backend/src/pybr25/core/setuphandlers/: __init__.py  initial.py
backend/src/pybr25/core/upgrades/: configure.zcml
backend/tests/: conftest.py
backend/tests/setup/: test_setup_install.py
devops/: README-GHA.md  README-GITLAB.md
devops/ansible/: .ansible-lint  .editorconfig  .env_dist  .gitignore  .vault_pass  Makefile  README.md  ansible.cfg  pyproject.toml  requirements.yml
devops/ansible/etc/base/: apt_proxy.j2  environment.j2
devops/ansible/etc/ssh/: default_ssh_config.j2
devops/ansible/etc/stacks/: cronjob.yml  traefik.yml
devops/ansible/inventory/: hosts.yml
devops/ansible/inventory/group_vars/all/: base.yml  disks.yml  docker.yml  packages.yml  proxy.yml  sshd.yml  stacks.yml  ufw.yml  users.yml  vault.yml
devops/ansible/playbooks/: _connect.yml  deploy.yml  setup.yml  stacks.yml
devops/ansible/tasks/base/: task_base_packages.yml  task_hostname.yml  task_mount_points.yml  task_proxy.yml  task_ssh.yml  task_ufw.yml  task_user.yml
devops/ansible/tasks/docker/: task_setup.yml  task_stack.yml  task_swarm.yml
devops/ansible/tasks/handlers/: common.yml
devops/ansible/tasks/stacks/: task_deploy.yml
devops/stacks/: pybr25-rondonit.tangrama.com.br.yml
devops/varnish/: Dockerfile
devops/varnish/etc/: varnish.vcl
docs/: README.md  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
frontend/: .eslintrc.js  Dockerfile  Makefile  README.md  mrs.developer.json  package.json  pnpm-lock.yaml  volto.config.js
